log
Fri, Mar 21, 2025 12:09:30 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Fri, Mar 21, 2025  3:46:37 PM: 
 tests:  0|5
total_score: 0/70
2bd9536
Fri, Mar 21, 2025  4:39:52 PM: 
 exercises.c | 40 ++++++++++++++++++++++++++++++++++++++--
 1 file changed, 38 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
c452391
Sat, Mar 22, 2025  2:22:24 PM: 
 exercises.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:134:14: error: implicit declaration of function 'isEmpty' [-Werror=implicit-function-declaration]
          if (isEmpty(pila))
              ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
0b6c1df
Sat, Mar 22, 2025  2:23:35 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
8fd6031
Sat, Mar 22, 2025  2:24:30 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
e1cf2a9
Sat, Mar 22, 2025  3:00:21 PM: 
 exercises.c | 20 ++++++++++++++------
 1 file changed, 14 insertions(+), 6 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:135:24: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
          char ultimo = top(pila);
                        ^~~
exercises.c:136:21: error: comparison between pointer and integer [-Werror]
          if (ultimo == NULL)
                     ^~
exercises.c:141:28: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
          if ((c == ')' && *(char*)ultimo == '(') || (c == ']' && *(char*)ultimo == '[') || (c == '}' && *(char*)ultimo == '{'))
                            ^
exercises.c:141:67: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
          if ((c == ')' && *(char*)ultimo == '(') || (c == ']' && *(char*)ultimo == '[') || (c == '}' && *(char*)ultimo == '{'))
                                                                   ^
exercises.c:141:106: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
          if ((c == ')' && *(char*)ultimo == '(') || (c == ']' && *(char*)ultimo == '[') || (c == '}' && *(char*)ultimo == '{'))
                                                                                                          ^
cc1.exe: all warnings being treated as errors
Compilation failed
cb63373
Sat, Mar 22, 2025  3:03:37 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:135:24: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
          char ultimo = top(pila);
                        ^~~
exercises.c:136:21: error: comparison between pointer and integer [-Werror]
          if (ultimo == NULL)
                     ^~
cc1.exe: all warnings being treated as errors
Compilation failed
c38158b
Sat, Mar 22, 2025  3:05:05 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
17af63b
Sat, Mar 22, 2025  3:08:00 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
03a5d13
Sat, Mar 22, 2025  3:27:17 PM: 
 exercises.c | 28 ----------------------------
 1 file changed, 28 deletions(-)
 tests:  4|1
total_score: 50/70
4552fe0
Sat, Mar 22, 2025  3:28:10 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
60a0bf8
Sat, Mar 22, 2025  3:28:36 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
75ae994
Sat, Mar 22, 2025  3:44:47 PM: 
 exercises.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:132:18: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
          push(P, caracter);
                  ^~~~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:140:29: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
          char topCaracter = top(P);
                             ^~~
In file included from test.c:5:0:
exercises.c:152:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
82e8bf5
Sat, Mar 22, 2025  3:48:25 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:132:18: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
          push(P, caracter);
                  ^~~~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:140:29: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
          char topCaracter = top(P);
                             ^~~
In file included from test.c:5:0:
exercises.c:152:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
f01a09b
Sat, Mar 22, 2025  3:52:13 PM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:152:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
afc4006
Sat, Mar 22, 2025  3:55:37 PM: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|1
total_score: 50/70
6e2e64c
Sat, Mar 22, 2025  4:02:18 PM: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  9|0
total_score: 70/70
bfd76db
Sat, Mar 22, 2025  4:03:13 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|0
total_score: 70/70
df779ae
